@@ -50,15 +50,16 @@ subprojects {
 
         //Added
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
-        developmentOnly 'org.springframework.boot:spring-boot-devtools'
-        implementation 'org.springframework.boot:spring-boot-devtools'
-        runtimeOnly 'org.springframework.boot:spring-boot-devtools'
+//        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+//        implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.9'
+//        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
         runtimeOnly 'com.mysql:mysql-connector-j'
         implementation 'com.h2database:h2:2.2.224'
         implementation 'org.springframework.boot:spring-boot-starter-jdbc'
         runtimeOnly 'org.postgresql:postgresql'
+
 
         implementation 'org.mapstruct:mapstruct:1.5.5.Final'
         annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
@@ -76,5 +77,9 @@ subprojects {
             mavenBom "io.github.resilience4j:resilience4j-bom:${resilience4jVersion}"
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
+    }
+
+    tasks.withType(JavaExec) {
+        jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
     }
 }
